deploy/overlays/test/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: gobg-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: gobg.test.7f000001.nip.io
    http:
      paths:
      - backend:
          service:
            name: gobg
            port:
              number: 8080
        path: /
        pathType: Prefix
